urls_downloaded_cb({"token": "Makefile.am", "urls": [{"url": "contribute/index.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "plugin-development/basics/boiler.html#page-description", "context": {"gi-language": ["default"]}}, {"url": "design/orc-integration.html#page-description", "context": {"gi-language": ["default"]}}]});